--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="backdrop-root"></div>
-  <div id="overlay-root"></div>
+  <div id="ovarlay-root"></div>
   <div id="root"></div>
 
 </body>
